fix zoom label visible

--- a/public/src/css/tileviewer.css
+++ b/public/src/css/tileviewer.css
@@ -99,7 +99,7 @@ hr {
 
 .tileviewer_property_inner {
     width: 250px;
-    height: calc(100% - 100px);
+    height: calc(100% - 135px);
     overflow-y: auto;
     overflow-x: hidden;
     opacity: 0.9;
